--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"ci": "biome ci"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.0.4"
+		"@biomejs/biome": "2.0.4",
+		"typescript": "^5.8.3"
 	}
 }
